<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/spTvActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_page_title"
        android:textColor="@color/black"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="46dp" />

    <Button
        android:id="@+id/spBtnRecordAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="130dp" />

    <Button
        android:id="@+id/spBtnStopRecordAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_record_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="196dp" />

    <Button
        android:id="@+id/spBtnPlayAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="322dp" />

    <Button
        android:id="@+id/spBtnStopPlayAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_playing_record_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="404dp" />

</androidx.constraintlayout.widget.ConstraintLayout>